--- a/maintenance_mgmtsystem_indicators_report/views/maintenance_request.xml
+++ b/maintenance_mgmtsystem_indicators_report/views/maintenance_request.xml
@@ -8,6 +8,10 @@
         >maintenance.request.form (in maintenance_mgmtsystem_indicators_report)</field>
         <field name="model">maintenance.request</field>
         <field name="inherit_id" ref="maintenance.hr_equipment_request_view_form" />
+        <field
+            name="groups_id"
+            eval="[(4, ref('mgmtsystem.group_mgmtsystem_manager'))]"
+        />
         <field name="arch" type="xml">
             <xpath expr="//span[hasclass('badge')]/.." position="before">
                 <div name="button_box " class="oe_button_box">
@@ -15,7 +19,6 @@
                         name="action_view_mgmtsystem_indicators_report_ids"
                         type="object"
                         class="oe_stat_button"
-                        groups="mgmtsystem.group_mgmtsystem_manager"
                         icon="fa-file"
                         attrs="{'invisible':[('mgmtsystem_indicators_report_count', '=', 0)]}"
                     >
@@ -31,10 +34,9 @@
                 <button
                     name='%(mgmtsystem_indicators_report.indicators_report_from_template_act_window)d'
                     type="action"
-                    groups="mgmtsystem.group_mgmtsystem_manager"
                     class="oe_highlight"
                     string="Create Ind.Report from Template"
-                    context="{'default_maintenance_request_id': active_id}"
+                    context="{'default_maintenance_request_id': id}"
                 />
             </xpath>
         </field>
