--- a/maintenance_request_purchase/views/maintenance_request.xml
+++ b/maintenance_request_purchase/views/maintenance_request.xml
@@ -29,7 +29,6 @@
         <field name="inherit_id" ref="base_maintenance.equipment_request_view_form" />
         <field name="arch" type="xml">
             <div name="button_box" position="inside">
-                <field name="purchase_order_ids" invisible="1" />
                 <button
                     name="action_view_purchase"
                     class="oe_stat_button"
@@ -44,6 +43,13 @@
                     />
                 </button>
             </div>
+            <field name="category_id" position="after">
+                <field
+                    name="purchase_order_ids"
+                    groups="base.group_no_one"
+                    widget="many2many_tags"
+                />
+            </field>
         </field>
     </record>
 </odoo>
