--- a/maintenance_request_purchase/views/maintenance_request.xml
+++ b/maintenance_request_purchase/views/maintenance_request.xml
@@ -2,12 +2,13 @@
 <!-- Copyright 2019 Creu Blanca
      License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl). -->
 <odoo>
-    <record model="ir.ui.view" id="hr_equipment_request_view_form">
+    <record model="ir.ui.view" id="hr_equipment_request_view_form_button_box">
         <field
             name="name"
         >maintenance.request.form (in maintenance_equipment_purchase)</field>
         <field name="model">maintenance.request</field>
-        <field name="inherit_id" ref="maintenance.hr_equipment_request_view_form" />
+        <field name="inherit_id" ref="base_maintenance.equipment_request_view_form" />
+        <field name="groups_id" eval="[(4, ref('purchase.group_purchase_user'))]" />
         <field name="arch" type="xml">
             <button name="archive_equipment_request" position="before">
                 <button
@@ -19,15 +20,6 @@
                     context="{'default_maintenance_request_id': active_id}"
                 />
             </button>
-        </field>
-    </record>
-    <record model="ir.ui.view" id="hr_equipment_request_view_form_button_box">
-        <field
-            name="name"
-        >maintenance.request.form (in maintenance_equipment_purchase)</field>
-        <field name="model">maintenance.request</field>
-        <field name="inherit_id" ref="base_maintenance.equipment_request_view_form" />
-        <field name="arch" type="xml">
             <div name="button_box" position="inside">
                 <button
                     name="action_view_purchase"
